IDP-1522 - Support for encrypted attributes in the resolver
https://issues.shibboleth.net/jira/browse/IDP-1522